--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router": "latest",
+    "react-youtube": "^10.1.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
